--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ hello }}</title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" href="{{ "/src/styles/main.css"|asset }}" />
     <script src="{{ "/src/scripts/main.js"|asset }}" type="module"></script>
 </head>
 <body>
 <figure>
-    <figcaption>{{ title }}</figcaption>
+    <figcaption>{{ hello }}</figcaption>
 </figure>
 </body>
 </html>
