added: tailwindcss as example

--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -8,7 +8,7 @@
 </head>
 <body>
 <figure>
-    <figcaption>{{ hello }}</figcaption>
+    <figcaption class="p-4 text-4xl">{{ hello }}</figcaption>
 </figure>
 </body>
 </html>
